--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    justify-content:center;
+    align-items: center;
 }
 
 .stock_list{
